src/styles/globals.css
* {
    margin: 0;
    padding: 0;
}

body {
    --primary: #407bff;
    --secondary: #314064;

    --border-radius-small: 0.5em;
    --border-radius-regular: 1em;
    --border-radius-big: 1.5em;

    margin: 0;
    padding-top: 2em;
}

body > div,
main {
    display: grid;
    grid-gap: 4em;
}

header,
footer,
section {
    width: 90vw;
    max-width: 1200px;
    margin: auto;
}

section {
    position: relative;
    overflow-x: hidden;
}

h1 {
    font-size: 4em;
    line-height: 1.1;
}

h2 {
    font-size: 3em;
    font-weight: 600;
    line-height: 1.1;
}

@media screen and (max-width: calc(1200px + 10vw)) {
    body {
        font-size: 1.2vw;
    }
}

@media screen and (max-width: 768px) {
    body {
        font-size: 2vw;
    }

    h1 {
        font-size: 3em;
    }
}

@media screen and (max-width: 550px) {
    body {
        font-size: 2.3vw;
    }
}

